--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -244,7 +244,7 @@ Parameters:
       - 'Aurora-MySQL5.7-2.09.1'
       - 'Aurora-MySQL5.7-2.09.2'
   DBEngineMode:
-    Description: "Engine mode of the cluster. With provisioned databases (the default), you provision and manage the server instance sizes. For descriptions, see https://aws.amazon.com/rds/aurora/mysql-features/."
+    Description: "Engine mode of the cluster. With provisioned databases (the default), you provision and manage the server instance sizes. For descriptions of the other options, see https://aws.amazon.com/rds/aurora/faqs/."
     Type: String
     Default: 'provisioned'
     AllowedValues:
