--- a/templates/aurora_mysql-main.template.yaml
+++ b/templates/aurora_mysql-main.template.yaml
@@ -3,6 +3,11 @@ AWSTemplateFormatVersion: '2010-09-09'
 Description: "AWS VPC + Aurora MySql, Do Not Remove Apache License Version 2.0 (qs-1r51947bu) Jun,15,2019"
 
 Metadata:
+  cfn-lint:
+    config:
+      ignore_checks:
+        - W9006
+        - E9101
   LICENSE: Apache License Version 2.0
   QuickStartDocumentation:
     EntrypointName: "Parameters for deploying into a new VPC"
