--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -195,7 +195,7 @@ Parameters:
   DBEngineVersion:
     Description: "Version of the database engine. Currently Multi-Master is available only for Aurora-MySQL5.6.10a, Serverless is available only for Aurora-MySQL5.6.10a and Aurora-MySQL5.7-2.07.1. To see supported Aurora features by Regions and engine versions, see https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/Concepts.AuroraFeaturesRegionsDBEngines.grids.html."
     Type: String
-    Default: 'Aurora-MySQL5.6.10a'
+    Default: 'Aurora-MySQL5.7.12'
     AllowedValues:
       - 'Aurora-MySQL5.6.10a'
       - 'Aurora-MySQL5.6-1.19.0'
@@ -241,6 +241,7 @@ Parameters:
       - 'Aurora-MySQL5.7-2.09.0'
       - 'Aurora-MySQL5.7-2.09.1'
       - 'Aurora-MySQL5.7-2.09.2'
+      - 'Aurora-MySQL5.7-2.10.0'
   DBEngineMode:
     Description: "Engine mode of the cluster. With provisioned databases (the default), you provision and manage the server instance sizes. For descriptions of the other options, see https://aws.amazon.com/rds/aurora/faqs/."
     Type: String
@@ -500,6 +501,8 @@ Mappings:
       "family": "aurora-mysql5.7"
     "Aurora-MySQL5.7-2.09.2":
       "family": "aurora-mysql5.7"
+    "Aurora-MySQL5.7-2.10.0":
+      "family": "aurora-mysql5.7"
     
   DBEngineVersionMap:
     "Aurora-MySQL5.6.10a":
@@ -590,6 +593,8 @@ Mappings:
       "engineversion": "5.7.mysql_aurora.2.09.1"
     "Aurora-MySQL5.7-2.09.2":
       "engineversion": "5.7.mysql_aurora.2.09.2"
+    "Aurora-MySQL5.7-2.10.0":
+      "engineversion": "5.7.mysql_aurora.2.10.0"
 
   DBEngineNameMap:
     "Aurora-MySQL5.6.10a":
@@ -679,6 +684,8 @@ Mappings:
     "Aurora-MySQL5.7-2.09.1":
       "enginename": "aurora-mysql"
     "Aurora-MySQL5.7-2.09.2":
+      "enginename": "aurora-mysql"
+    "Aurora-MySQL5.7-2.10.0":
       "enginename": "aurora-mysql"
 
 Rules:
@@ -781,6 +788,7 @@ Conditions:
           - !Equals [!Ref DBEngineVersion,'Aurora-MySQL5.7-2.09.0']
           - !Equals [!Ref DBEngineVersion,'Aurora-MySQL5.7-2.09.1']
           - !Equals [!Ref DBEngineVersion,'Aurora-MySQL5.7-2.09.2']
+          - !Equals [!Ref DBEngineVersion,'Aurora-MySQL5.7-2.10.0']
   DoEnableCWLogExport: !And [!Not [!Equals [!Join ['', !Ref DBCWLogExports], '']], !Condition IsServerlessDisabled]
   DoCreateDatabase:
     !Not
