added DBBackTrack to parameter section

--- a/templates/aurora_mysql.template.yaml
+++ b/templates/aurora_mysql.template.yaml
@@ -434,6 +434,13 @@ Parameters:
     Description: "The email notification used to configure an SNS topic for sending CloudWatch alarm and RDS event notifications."
     AllowedPattern: '^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$'
     ConstraintDescription: "Provide a valid email address."
+  DBBackTrack:
+    Description: "The target backtrack window, in seconds. To disable backtracking,
+      set this value to 0."
+    Type: Number
+    Default: 0
+    MinValue: 0
+    MaxValue: 259200
   PerformanceInsightsRetentionPeriod:
     Default: 7
     Description: "The number of days for which automatic database snapshots are retained. Specify days based on (month * 31), where month is a number of months from 1-23."
