--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -19,6 +19,7 @@ tests:
     parameters:
       AvailabilityZones: $[taskcat_genaz_2]
 #@      DBEngineVersion: Aurora-MySQL5.7.12
+      DBMasterUsername: "pgadmin"
       DBMasterUserPassword: Passw0rd1!
       DBMultiAZ: "false"
       EnableBastion: "false"
